Disabled SignalR from running if e2e testing in Cypress Fixed the page not displaying the pages due to z-index issue

--- a/src/WebAPI/ClientApp/src/assets/scss/overwriting.scss
+++ b/src/WebAPI/ClientApp/src/assets/scss/overwriting.scss
@@ -1,6 +1,13 @@
 @import 'variables';
 
 /*
+v-app
+*/
+.v-application {
+  background-color: transparent !important;
+}
+
+/*
 grid
 */
 .container {
